chore: some fix

--- a/app/app/routes/garden/hippocratic-oath-for-developers.mdx
+++ b/app/app/routes/garden/hippocratic-oath-for-developers.mdx
@@ -12,6 +12,8 @@ tags:
 publishedAt: 2021-09-09
 ---
 
+# Hippocratic
+
 Let's face it, today software trends are user hostile. Every website in 2021 is hugely bloated, wants to send you notifications,
 knows your location, and lock user generated data to only registered/paying customers. The web was born as a open digital garden to everyone
 and it became a shopping mall, full of deceit and dark design patterns.
