bugfix: Fixes deep routes of garden/ not rendering

--- a/app/posts/garden/complexity/introduction-to-complexity.mdx
+++ b/app/posts/garden/complexity/introduction-to-complexity.mdx
@@ -21,10 +21,12 @@ that:
 > surface, they will walk around and around in never decreasing circles until they die of
 > exhaustion. In extremely high numbers, however, it is a different story.
 
-<div class="right-25">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Safari_ants_tunnel.jpg" alt="Ants building a tunnel"/>
-  <figcaption>Ants building a tunnel</figcaption>
+
+<div className="right-25">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Safari_ants_tunnel.jpg" alt="Ants building a tunnel" />
+    <figcaption>Ants building a tunnel</figcaption>
 </div>
+
 
 Figure 1 show a colony of army ants building a tunnel. Each ant on it's own is very simple, but the
 colony as a whole can work together cooperatively to accomplish complex tasks without central control. In other words, ant colonies can organize themselves to produce structures much more complicated than any single ant can produce.
@@ -40,13 +42,14 @@ creativity. Brain imaging has show that these neurons organize themselves into d
 like the ants or termites, neurons can self-organize into complex structures that help the species function
 and survive.
 
-<div class="centered">
 
-  <img src="/pictures/brain-innerworkings.png" alt="brain architecture"/>
-  <figcaption>Brain architecture
-    <sup id="fnref-1"><a href="#fn-1" class="footnote-ref">1</a></sup>
-  </figcaption>
+<div className="centered">
+    <img src="/pictures/brain-innerworkings.png" alt="brain architecture" />
+    <figcaption>
+      <a href="#fn-1" className="footnote-ref">1</a>
+    </figcaption>
 </div>
+
 
 Yet another complex system is the immune system, distributed across the body and involving many different organs and trillions of cells moving around the bloodstream or lymph stream protecting ad healing the body from damage or disease.
 Like the ants we saw before, the immune system cells communicate with one another through chemical signals, and work together without any central control to launch coordinated attacks on what they perceive as threats to the body. In addition, the population of immune cells in the body is able to change, or adapt itself in response to what that population of cells perceives in its environment.
@@ -60,8 +63,8 @@ components that interact with other genes in decentralized way.
 And they interact with other genes through genetic regulatory networks. They control one another's expression, where
 expression means translation to proteins. It turns out, that the human genome is made up of thousands of regulatory networks like this one. And it's these interactions largely responsible for our own complexity.
 
-<div class="centered">
-<img src="https://upload.wikimedia.org/wikipedia/commons/d/dc/DG_Network_in_Hybrid_Rice.png">
+<div className="centered">
+<img src="https://upload.wikimedia.org/wikipedia/commons/d/dc/DG_Network_in_Hybrid_Rice.png" />
 <figcaption>A genetic regulatory network in hybrid rice</figcaption>
 </div>
 
@@ -74,7 +77,7 @@ these kinds of phenomena in networks from many different disciplines. As the fin
 
 # Properties of complex systems
 
-<div class="twocolumn-page">
+<div className="twocolumn-page">
 
 Now that we've seen several examples of complex systems, let's try to abstract some of the properties of the ones that we've seen.
 
